原型文件首页等部分页面，移入小程序目录，并优化调整。

--- a/miniapp/src/components/Button/index.less
+++ b/miniapp/src/components/Button/index.less
@@ -27,7 +27,7 @@
   &--secondary {
     background-color: @bg-color-light;
     color: @text-color;
-    border: 1px solid @border-color;
+    border: 2rpx solid @border-color;
     
     &:hover {
       background-color: @bg-color;
@@ -64,19 +64,19 @@
   &--small {
     padding: @spacing-xs @spacing-sm;
     font-size: @font-size-sm;
-    min-height: 60px;
+    min-height: 120rpx;
   }
   
   &--medium {
     padding: @spacing-sm @spacing-md;
     font-size: @font-size-base;
-    min-height: 80px;
+    min-height: 160rpx;
   }
   
   &--large {
     padding: @spacing-md @spacing-lg;
     font-size: @font-size-lg;
-    min-height: 100px;
+    min-height: 200rpx;
   }
   
   &--disabled {
