--- a/miniapp/src/components/Input/index.less
+++ b/miniapp/src/components/Input/index.less
@@ -9,13 +9,13 @@
 .custom-input {
   .input();
   width: 100%;
-  min-height: 80px;
+  min-height: 160rpx;
   font-size: @font-size-base;
   line-height: @line-height-base;
   
   &--focused {
     border-color: @primary-color;
-    box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+    box-shadow: 0 0 0 4rpx rgba(24, 144, 255, 0.2);
   }
   
   &--disabled {
