--- a/miniapp/src/styles/mixins.less
+++ b/miniapp/src/styles/mixins.less
@@ -75,7 +75,7 @@
 
 // 输入框样式
 .input(@border-color: @border-color, @border-radius: @border-radius-sm) {
-  border: 1px solid @border-color;
+  border: 2rpx solid @border-color;
   border-radius: @border-radius;
   padding: @spacing-sm @spacing-md;
   font-size: @font-size-base;
