--- a/miniapp/src/app.less
+++ b/miniapp/src/app.less
@@ -13,6 +13,8 @@ page {
   font-size: @font-size-base;
   line-height: @line-height-base;
   color: @text-color;
+  height: 100vh;
+  overflow: hidden;
 }
 
 // 通用类
