--- a/miniapp/src/components/Loading/index.less
+++ b/miniapp/src/components/Loading/index.less
@@ -18,8 +18,8 @@
   
   &--small {
     .custom-loading__spinner {
-      width: 40px;
-      height: 40px;
+      width: 80rpx;
+      height: 80rpx;
     }
     
     .custom-loading__text {
@@ -29,8 +29,8 @@
   
   &--medium {
     .custom-loading__spinner {
-      width: 60px;
-      height: 60px;
+      width: 120rpx;
+      height: 120rpx;
     }
     
     .custom-loading__text {
@@ -40,8 +40,8 @@
   
   &--large {
     .custom-loading__spinner {
-      width: 80px;
-      height: 80px;
+      width: 160rpx;
+      height: 160rpx;
     }
     
     .custom-loading__text {
@@ -57,8 +57,8 @@
   }
   
   &__dot {
-    width: 12px;
-    height: 12px;
+    width: 24rpx;
+    height: 24rpx;
     border-radius: 50%;
     background-color: @primary-color;
     animation: loading-bounce 1.4s ease-in-out infinite both;
