--- a/miniapp/src/pages/login/index.less
+++ b/miniapp/src/pages/login/index.less
@@ -12,8 +12,8 @@
   }
   
   &__logo {
-    width: 120px;
-    height: 120px;
+    width: 240rpx;
+    height: 240rpx;
     margin-bottom: @spacing-lg;
   }
   
