--- a/miniapp/src/pages/user/index.less
+++ b/miniapp/src/pages/user/index.less
@@ -17,10 +17,10 @@
   }
   
   &__avatar {
-    width: 120px;
-    height: 120px;
+    width: 240rpx;
+    height: 240rpx;
     border-radius: 50%;
-    border: 4px solid rgba(255, 255, 255, 0.3);
+    border: 8rpx solid rgba(255, 255, 255, 0.3);
   }
   
   &__info {
@@ -74,7 +74,7 @@
   &__menu-item {
     .flex(row, flex-start, center);
     padding: @spacing-lg;
-    border-bottom: 1px solid @border-color-light;
+    border-bottom: 2rpx solid @border-color-light;
     
     &:last-child {
       border-bottom: none;
