--- a/miniapp/src/pages/login/index.less
+++ b/miniapp/src/pages/login/index.less
@@ -3,7 +3,7 @@
 
 .login-page {
   min-height: 100vh;
-  background: #ffffff;
+  background: #f7f9ff;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
