--- a/miniapp/src/pages/majors/index.less
+++ b/miniapp/src/pages/majors/index.less
@@ -2,7 +2,7 @@
 .majors-page {
   flex: 1;
   min-height: 0;
-  background: var(--background, #fff);
+  background: #f7f9ff;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
