--- a/miniapp/src/pages/profile/index.less
+++ b/miniapp/src/pages/profile/index.less
@@ -2,7 +2,7 @@
 .profile-page {
   flex: 1;
   min-height: 0;
-  background: #F5F5F5;
+  background: #f7f9ff;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
