--- a/miniapp/src/pages/assessment/all-majors/index.less
+++ b/miniapp/src/pages/assessment/all-majors/index.less
@@ -2,7 +2,7 @@
 .all-majors-page {
   flex: 1;
   min-height: 0;
-  background: #F5F5F5;
+  background: #f7f9ff;
   display: flex;
   align-items: center;
   justify-content: center;
