--- a/miniapp/src/pages/assessment/popular-majors/index.less
+++ b/miniapp/src/pages/assessment/popular-majors/index.less
@@ -1,7 +1,7 @@
 // 热门专业评估页面样式
 .popular-majors-page {
   min-height: 100vh;
-  background: #F5F5F5;
+  background: #f7f9ff;
   display: flex;
   align-items: center;
   justify-content: center;
