--- a/miniapp/src/pages/assessment/questionnaire/index.less
+++ b/miniapp/src/pages/assessment/questionnaire/index.less
@@ -1,7 +1,7 @@
 // 问卷页面样式
 .questionnaire-page {
   min-height: 100vh;
-  background: #F5F5F5;
+  background: #f7f9ff;
   display: flex;
   flex-direction: column;
 }
