--- a/miniapp/src/styles/variables.less
+++ b/miniapp/src/styles/variables.less
@@ -12,7 +12,7 @@
 @text-color-inverse: #ffffff;
 
 // 背景颜色
-@bg-color: #f5f5f5;
+@bg-color: #f7f9ff;
 @bg-color-light: #ffffff;
 @bg-color-dark: #1f1f1f;
 
