--- a/miniapp/src/pages/profile/index.less
+++ b/miniapp/src/pages/profile/index.less
@@ -1,13 +1,9 @@
 // 个人中心页面样式
 .profile-page {
-  flex: 1;
-  min-height: 0;
+  min-height: 100%;
   background: #f0f7ff;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
 }
 
 .profile-page__header {
