--- a/miniapp/src/pages/index/index.less
+++ b/miniapp/src/pages/index/index.less
@@ -108,7 +108,7 @@
   margin-top: -40rpx;
   display: flex;
   flex-direction: column;
-  gap: 40rpx;
+  gap: 24rpx;
   width: 100%;
   max-width: 100%;
   margin-left: auto;
@@ -123,6 +123,7 @@
   max-width: 100%;
   cursor: pointer;
   box-sizing: border-box;
+  margin-bottom:30rpx;
 }
 
 .index-page__card-inner {
@@ -131,20 +132,20 @@
   border-left: 8rpx solid rgba(255, 127, 80, 0.3);
   box-shadow: 0 8rpx 24rpx rgba(0, 0, 0, 0.08);
   background: linear-gradient(to bottom right, rgba(26, 64, 153, 0.03), #fff);
-  padding: 40rpx;
+  padding: 45rpx;
   border-radius: 24rpx;
 }
 
 .index-page__card-header {
   display: flex;
   align-items: flex-start;
-  gap: 24rpx;
-  margin-bottom: 32rpx;
+  gap: 20rpx;
+  margin-bottom: 24rpx;
 }
 
 .index-page__card-icon {
-  width: 96rpx;
-  height: 96rpx;
+  width: 88rpx;
+  height: 88rpx;
   border-radius: 20rpx;
   display: flex;
   align-items: center;
@@ -175,7 +176,7 @@
   font-weight: 700;
   color: #1A4099;
   line-height: 1.3;
-  margin-bottom: 8rpx;
+  margin-bottom: 6rpx;
 }
 
 .index-page__card-tags {
@@ -183,7 +184,7 @@
   align-items: center;
   gap: 12rpx;
   flex-wrap: wrap;
-  margin-bottom: 16rpx;
+  margin-bottom: 8rpx;
 }
 
 .index-page__card-tag {
@@ -204,8 +205,9 @@
   font-size: 28rpx;
   color: #1A4099;
   font-weight: 500;
-  line-height: 1.6;
-  margin-bottom: 32rpx;
+  line-height: 1.5;
+  margin-top: 0;
+  margin-bottom: 16rpx;
 }
 
 .index-page__card-desc-highlight {
@@ -215,8 +217,8 @@
 
 .index-page__card-button {
   width: 100%;
-  height: 96rpx;
-  font-size: 32rpx;
+  height: 88rpx;
+  font-size: 30rpx;
   font-weight: 700;
   border-radius: 16rpx;
   box-shadow: 0 8rpx 24rpx rgba(255, 127, 80, 0.3);
@@ -230,8 +232,8 @@
     color: #FF7F50;
     box-shadow: 0 2rpx 8rpx rgba(255, 127, 80, 0.15);
     font-weight: 600;
-    height: 88rpx;
-    font-size: 30rpx;
+    height: 80rpx;
+    font-size: 28rpx;
     
     &:active {
       background: rgba(255, 127, 80, 0.1);
