--- a/miniapp/src/pages/login/index.less
+++ b/miniapp/src/pages/login/index.less
@@ -110,6 +110,36 @@
     margin-bottom: 40rpx;
     margin-top: 100rpx;
   }
+
+  &__login-button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    // 确保插件按钮占满容器宽度
+    // 注意：插件组件可能不支持直接设置样式，需要通过容器控制
+    login {
+      width: 100%;
+      display: block;
+      
+      // 如果插件内部有按钮元素，尝试通过深度选择器设置
+      /deep/ button,
+      ::v-deep button {
+        width: 100% !important;
+      }
+    }
+  }
+
+  &__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
   
   &__wechat-btn {
     width: 100%;
